20090414 dholland	System/161 1.99.04 released.
20090414 dholland	Improve realism of disk timing model some.

20090228 dholland	System/161 1.99.03 released.
20090228 dholland	Fix time-handing bug that manifested under OS/161 2.x.
20090210 dholland	In stat161, fix reconnection-related printout glitches.
20090210 dholland	Improve interrupt/exception tracing.
20090210 dholland	Fix build issue on NetBSD-current.

20090206 dholland	System/161 1.99.02 released.
20090206 dholland	Fix build glitch when building inside source tree.

20090202 dholland	System/161 1.99.01 released.
20090201 dholland	More build fixes for Linux, on amd64.
20090201 dholland	Avoid doing (u_int32_t)1 << 32.
20090201 dholland	Fix cpu cycle counters for multiple-cpu configs.
20090201 dholland	Make debugger "see" whichever CPU hits a breakpoint.
20090131 dholland	Build fixes for Linux.
20090130 dholland	Make trace system handline multiple-cpu configs right.
20090130 dholland	Fix trace macros to be C99 varargs macros.
20090130 dholland	Make SELF register behave as documented.
20090130 dholland	Make secondary CPU startup work.
20090129 dholland	Add on-chip timer from MIPS32.
20090129 dholland	Add ll/sc instructions. Haven't bumped CPU version id.
20090126 dholland	Implement multiprocessor bus controller.
20090126 dholland	Add interrupt masking register to (old) bus controller.
			Bump (old) bus controller revision level to 2.
20090123 dholland	Rework docs completely.
20090123 dholland	Fix old nonstandard install layout.
20090123 dholland	Begin reorg of makefiles and build system.

20080627 dholland	System/161 1.14 released.
20080627 dholland	Make it work with gdb 6.6.
20080627 dholland	Fix broken build under NetBSD-current.

20050913 dholland	System/161 1.13 released.
20050826 dholland	Minor patches for clean build with gcc 4.0.1.
20040430 dholland	Add -P, which was missing, to the usage message.

20040415 dholland	System/161 1.12 released.
20040415 dholland	Minor compile fixes for gcc >= 3.0.