@@ -19,7 +19,7 @@ System/161 2.x Software and Hardware Manual
 <font size=+1 color=#36648b>
 David A. Holland
 <br>
-January 26, 2009
+August 19, 2010
 </font>
 
 </font>
@@ -28,7 +28,7 @@ January 26, 2009
 
 <p align=right><i>
 <font face=tahoma,arial,helvetica,sans>
-<A HREF=copying.txt>Copyright</A> 2000, 2001, 2002, 2009
+<A HREF=copying.txt>Copyright</A> 2000, 2001, 2002, 2009, 2010
 <br>
 The President and Fellows of Harvard College.
 </font>
