@@ -454,7 +454,7 @@ mappings.
 </p>
 
 <p>
-The processor is build to support a fast-path TLB refill handler,
+The processor is built to support a fast-path TLB refill handler,
 which is invoked via the UTLB exception vector (see above). The idea
 is that the OS maintains page tables in virtual memory using the kseg2
 region (see above) and loads the base address of the page table into
