@@ -1,3 +1,5 @@
+20100819 dholland	Add a FORCE bit to the serial port device. See docs.
+
 20090414 dholland	System/161 1.99.04 released.
 20090414 dholland	Improve realism of disk timing model some.
 
